# gabion

./: .gitignore  LICENSE  README.md  bbt-README.md  pyproject.toml
examples/: local_simulation.py
gabion/: cli.py
gabion/common/: config.py  jobs.py  logging.py  protocol.py
gabion/mesh/: aggregator.py  coordinator.py  job_factory.py  server.py
gabion/pebble/: adapters.py  trainer.py  worker.py
gabion/user_models/: __init__.py  bbt_transformer.py  linear.py  mnist_softmax.py
gabion/web/: bbt_forward.js  tinygrad_v0.js  webgpu_backend.js
gabion/web/kernels/: adam_update.wgsl  batched_matmul.wgsl  batched_transpose.wgsl  cross_entropy_backward.wgsl  cross_entropy_forward.wgsl  elementwise.wgsl  embedding_forward.wgsl  fused_attention.wgsl  matmul.wgsl  reduce.wgsl  rmsnorm_backward.wgsl  rope.wgsl  rope_backward.wgsl  sgd_update.wgsl  silu_mul.wgsl  silu_mul_backward.wgsl  softmax.wgsl  softmax_backward.wgsl
tests/: test_adapters.py  test_aggregator.py  test_bbt_transformer.py  test_cli_device_flags.py  test_e2e.py  test_mesh_eval.py  test_round_coordinator.py  test_trainer_tinygrad.py
