[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gabion"
version = "0.1.0"
description = "Lightweight HTTP/WebSocket federated training mesh for tinygrad workers"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "gabion contributors"}]
dependencies = [
  "aiohttp>=3.9.0",
  "tinygrad>=0.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
gabion = "gabion.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
